--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,8 @@ available in the app when your plugin is enabled.
 If your plugin does not need CSS, delete this file.
 
 */
+
+.am-task-textarea-setting textarea{
+  min-height: 5em;
+  width: 200%;
+}
